Updates docs and configuration

--- a/config/icinga/Invoke-IcingaCheckBiosSerial.conf
+++ b/config/icinga/Invoke-IcingaCheckBiosSerial.conf
@@ -25,4 +25,10 @@ object CheckCommand "Invoke-IcingaCheckBiosSerial" {
             order = 100
         }
     }
+    vars.ifw_api_arguments = {
+        "ThresholdInterval" = {
+            value = "$IcingaCheckBiosSerial_String_ThresholdInterval$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckbiosserial
 }
