--- a/config/icinga/Invoke-IcingaCheckCPU.conf
+++ b/config/icinga/Invoke-IcingaCheckCPU.conf
@@ -89,6 +89,33 @@ object CheckCommand "Invoke-IcingaCheckCPU" {
             order = 99
         }
     }
-    vars.IcingaCheckCPU_Switchparameter_NoPerfData = false
     vars.IcingaCheckCPU_Switchparameter_OverallOnly = false
+    vars.ifw_api_arguments = {
+        "ThresholdInterval" = {
+            value = "$IcingaCheckCPU_String_ThresholdInterval$"
+        }
+        "SocketFilter" = {
+            value = "$IcingaCheckCPU_Array_SocketFilter$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckCPU_Object_Critical$"
+        }
+        "Core" = {
+            value = "$IcingaCheckCPU_String_Core$"
+        }
+        "OverallOnly" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_OverallOnly$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckCPU_Object_Warning$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckCPU_Switchparameter_NoPerfData$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckCPU_Int32_Verbosity$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckcpu
+    vars.IcingaCheckCPU_Switchparameter_NoPerfData = false
 }
