--- a/config/icinga/Invoke-IcingaCheckCertificate.conf
+++ b/config/icinga/Invoke-IcingaCheckCertificate.conf
@@ -195,7 +195,55 @@ object CheckCommand "Invoke-IcingaCheckCertificate" {
             order = 11
         }
     }
-    vars.IcingaCheckCertificate_Switchparameter_Recurse = false
-    vars.IcingaCheckCertificate_Switchparameter_Trusted = false
     vars.IcingaCheckCertificate_Switchparameter_IgnoreEmpty = false
+    vars.IcingaCheckCertificate_Switchparameter_Recurse = false
+    vars.ifw_api_arguments = {
+        "CertStorePath" = {
+            value = "$IcingaCheckCertificate_Object_CertStorePath$"
+        }
+        "CertPaths" = {
+            value = "$IcingaCheckCertificate_Array_CertPaths$"
+        }
+        "CertName" = {
+            value = "$IcingaCheckCertificate_Array_CertName$"
+        }
+        "CriticalEnd" = {
+            value = "$IcingaCheckCertificate_Object_CriticalEnd$"
+        }
+        "Trusted" = {
+            set_if = "$IcingaCheckCertificate_Switchparameter_Trusted$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckCertificate_String_ThresholdInterval$"
+        }
+        "CertThumbprint" = {
+            value = "$IcingaCheckCertificate_Array_CertThumbprint$"
+        }
+        "CertStore" = {
+            value = "$IcingaCheckCertificate_String_CertStore$"
+        }
+        "CertSubject" = {
+            value = "$IcingaCheckCertificate_Array_CertSubject$"
+        }
+        "IgnoreEmpty" = {
+            set_if = "$IcingaCheckCertificate_Switchparameter_IgnoreEmpty$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckCertificate_Int32_Verbosity$"
+        }
+        "CriticalStart" = {
+            value = "$IcingaCheckCertificate_Object_CriticalStart$"
+        }
+        "WarningEnd" = {
+            value = "$IcingaCheckCertificate_Object_WarningEnd$"
+        }
+        "ExcludePattern" = {
+            value = "$IcingaCheckCertificate_Array_ExcludePattern$"
+        }
+        "Recurse" = {
+            set_if = "$IcingaCheckCertificate_Switchparameter_Recurse$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckcertificate
+    vars.IcingaCheckCertificate_Switchparameter_Trusted = false
 }
