--- a/config/icinga/Invoke-IcingaCheckCheckSum.conf
+++ b/config/icinga/Invoke-IcingaCheckCheckSum.conf
@@ -87,4 +87,25 @@ object CheckCommand "Invoke-IcingaCheckCheckSum" {
         }
     }
     vars.IcingaCheckCheckSum_Switchparameter_NoPerfData = false
+    vars.ifw_api_arguments = {
+        "Path" = {
+            value = "$IcingaCheckCheckSum_String_Path$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckCheckSum_String_ThresholdInterval$"
+        }
+        "Algorithm" = {
+            value = "$IcingaCheckCheckSum_String_Algorithm$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckCheckSum_Int32_Verbosity$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckCheckSum_Switchparameter_NoPerfData$"
+        }
+        "Hash" = {
+            value = "$IcingaCheckCheckSum_String_Hash$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckchecksum
 }
