--- a/config/icinga/Invoke-IcingaCheckDirectory.conf
+++ b/config/icinga/Invoke-IcingaCheckDirectory.conf
@@ -282,7 +282,88 @@ object CheckCommand "Invoke-IcingaCheckDirectory" {
         }
     }
     vars.IcingaCheckDirectory_Switchparameter_CountFolderAsFile = false
+    vars.ifw_api_arguments = {
+        "CreationOlderThan" = {
+            value = "$IcingaCheckDirectory_String_CreationOlderThan$"
+        }
+        "WarningAverageFile" = {
+            value = "$IcingaCheckDirectory_Object_WarningAverageFile$"
+        }
+        "CriticalAverageFile" = {
+            value = "$IcingaCheckDirectory_Object_CriticalAverageFile$"
+        }
+        "WarningLargestFile" = {
+            value = "$IcingaCheckDirectory_Object_WarningLargestFile$"
+        }
+        "CriticalLargestFile" = {
+            value = "$IcingaCheckDirectory_Object_CriticalLargestFile$"
+        }
+        "WarningSmallestFile" = {
+            value = "$IcingaCheckDirectory_Object_WarningSmallestFile$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckDirectory_Switchparameter_NoPerfData$"
+        }
+        "ChangeYoungerThan" = {
+            value = "$IcingaCheckDirectory_String_ChangeYoungerThan$"
+        }
+        "CountFolderAsFile" = {
+            set_if = "$IcingaCheckDirectory_Switchparameter_CountFolderAsFile$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckDirectory_String_ThresholdInterval$"
+        }
+        "CriticalSmallestFile" = {
+            value = "$IcingaCheckDirectory_Object_CriticalSmallestFile$"
+        }
+        "CriticalTotalSize" = {
+            value = "$IcingaCheckDirectory_Object_CriticalTotalSize$"
+        }
+        "FileSizeGreaterThan" = {
+            value = "$IcingaCheckDirectory_String_FileSizeGreaterThan$"
+        }
+        "WarningTotalSize" = {
+            value = "$IcingaCheckDirectory_Object_WarningTotalSize$"
+        }
+        "ChangeTimeEqual" = {
+            value = "$IcingaCheckDirectory_String_ChangeTimeEqual$"
+        }
+        "FileSizeSmallerThan" = {
+            value = "$IcingaCheckDirectory_String_FileSizeSmallerThan$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckDirectory_Object_Warning$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckDirectory_Object_Critical$"
+        }
+        "ChangeOlderThan" = {
+            value = "$IcingaCheckDirectory_String_ChangeOlderThan$"
+        }
+        "ShowFileList" = {
+            set_if = "$IcingaCheckDirectory_Switchparameter_ShowFileList$"
+        }
+        "FileNames" = {
+            value = "$IcingaCheckDirectory_Array_FileNames$"
+        }
+        "CreationTimeEqual" = {
+            value = "$IcingaCheckDirectory_String_CreationTimeEqual$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckDirectory_Int32_Verbosity$"
+        }
+        "Path" = {
+            value = "$IcingaCheckDirectory_String_Path$"
+        }
+        "CreationYoungerThan" = {
+            value = "$IcingaCheckDirectory_String_CreationYoungerThan$"
+        }
+        "Recurse" = {
+            set_if = "$IcingaCheckDirectory_Switchparameter_Recurse$"
+        }
+    }
+    vars.IcingaCheckDirectory_Switchparameter_ShowFileList = false
+    vars.ifw_api_command = invoke-icingacheckdirectory
     vars.IcingaCheckDirectory_Switchparameter_NoPerfData = false
     vars.IcingaCheckDirectory_Switchparameter_Recurse = false
-    vars.IcingaCheckDirectory_Switchparameter_ShowFileList = false
 }
