--- a/config/icinga/Invoke-IcingaCheckDiskHealth.conf
+++ b/config/icinga/Invoke-IcingaCheckDiskHealth.conf
@@ -228,8 +228,95 @@ object CheckCommand "Invoke-IcingaCheckDiskHealth" {
             order = 19
         }
     }
-    vars.IcingaCheckDiskHealth_Switchparameter_IgnoreReadOnlyDisks = false
-    vars.IcingaCheckDiskHealth_Switchparameter_IgnoreOfflineDisks = false
     vars.IcingaCheckDiskHealth_Switchparameter_NoPerfData = false
+    vars.ifw_api_arguments = {
+        "NoPerfData" = {
+            set_if = "$IcingaCheckDiskHealth_Switchparameter_NoPerfData$"
+        }
+        "DiskAvgWriteSecCritical" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskAvgWriteSecCritical$"
+        }
+        "CheckLogicalOnly" = {
+            set_if = "$IcingaCheckDiskHealth_Switchparameter_CheckLogicalOnly$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckDiskHealth_Int32_Verbosity$"
+        }
+        "DiskReadByteSecWarning" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskReadByteSecWarning$"
+        }
+        "IgnoreReadOnlyDisks" = {
+            set_if = "$IcingaCheckDiskHealth_Switchparameter_IgnoreReadOnlyDisks$"
+        }
+        "DiskWriteByteSecWarning" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskWriteByteSecWarning$"
+        }
+        "DiskQueueLenCritical" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskQueueLenCritical$"
+        }
+        "ExcludeDisk" = {
+            value = "$IcingaCheckDiskHealth_Array_ExcludeDisk$"
+        }
+        "IncludeDisk" = {
+            value = "$IcingaCheckDiskHealth_Array_IncludeDisk$"
+        }
+        "DiskAvgTransSecWarning" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskAvgTransSecWarning$"
+        }
+        "DiskReadByteSecCritical" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskReadByteSecCritical$"
+        }
+        "DiskAvgReadSecCritical" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskAvgReadSecCritical$"
+        }
+        "DiskWriteSecWarning" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskWriteSecWarning$"
+        }
+        "DiskWriteByteSecCritical" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskWriteByteSecCritical$"
+        }
+        "ExcludePartition" = {
+            value = "$IcingaCheckDiskHealth_Array_ExcludePartition$"
+        }
+        "IgnoreOfflineDisks" = {
+            set_if = "$IcingaCheckDiskHealth_Switchparameter_IgnoreOfflineDisks$"
+        }
+        "DiskWriteSecCritical" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskWriteSecCritical$"
+        }
+        "DiskReadSecCritical" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskReadSecCritical$"
+        }
+        "DiskQueueLenWarning" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskQueueLenWarning$"
+        }
+        "DiskAvgReadSecWarning" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskAvgReadSecWarning$"
+        }
+        "DiskAvgTransSecCritical" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskAvgTransSecCritical$"
+        }
+        "DiskQueueAvgLenCritical" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskQueueAvgLenCritical$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckDiskHealth_String_ThresholdInterval$"
+        }
+        "DiskAvgWriteSecWarning" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskAvgWriteSecWarning$"
+        }
+        "DiskReadSecWarning" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskReadSecWarning$"
+        }
+        "IncludePartition" = {
+            value = "$IcingaCheckDiskHealth_Array_IncludePartition$"
+        }
+        "DiskQueueAvgLenWarning" = {
+            value = "$IcingaCheckDiskHealth_Object_DiskQueueAvgLenWarning$"
+        }
+    }
     vars.IcingaCheckDiskHealth_Switchparameter_CheckLogicalOnly = false
+    vars.IcingaCheckDiskHealth_Switchparameter_IgnoreReadOnlyDisks = false
+    vars.ifw_api_command = invoke-icingacheckdiskhealth
+    vars.IcingaCheckDiskHealth_Switchparameter_IgnoreOfflineDisks = false
 }
