--- a/config/icinga/Invoke-IcingaCheckEventlog.conf
+++ b/config/icinga/Invoke-IcingaCheckEventlog.conf
@@ -311,6 +311,69 @@ object CheckCommand "Invoke-IcingaCheckEventlog" {
             order = 12
         }
     }
-    vars.IcingaCheckEventlog_Switchparameter_NoPerfData = false
     vars.IcingaCheckEventlog_Switchparameter_DisableTimeCache = false
+    vars.ifw_api_arguments = {
+        "IncludeEventId" = {
+            value = "$IcingaCheckEventlog_Array_IncludeEventId$"
+        }
+        "DisableTimeCache" = {
+            set_if = "$IcingaCheckEventlog_Switchparameter_DisableTimeCache$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckEventlog_String_ThresholdInterval$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckEventlog_Switchparameter_NoPerfData$"
+        }
+        "ExcludeEventId" = {
+            value = "$IcingaCheckEventlog_Array_ExcludeEventId$"
+        }
+        "Before" = {
+            value = "$IcingaCheckEventlog_Object_Before$"
+        }
+        "IncludeEntryType" = {
+            value = "$IcingaCheckEventlog_Array_IncludeEntryType$"
+        }
+        "LogName" = {
+            value = "$IcingaCheckEventlog_String_LogName$"
+        }
+        "ExcludeEntryType" = {
+            value = "$IcingaCheckEventlog_Array_ExcludeEntryType$"
+        }
+        "IncludeSource" = {
+            value = "$IcingaCheckEventlog_Array_IncludeSource$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckEventlog_Object_Warning$"
+        }
+        "MaxEntries" = {
+            value = "$IcingaCheckEventlog_Int32_MaxEntries$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckEventlog_Object_Critical$"
+        }
+        "ExcludeUsername" = {
+            value = "$IcingaCheckEventlog_Array_ExcludeUsername$"
+        }
+        "After" = {
+            value = "$IcingaCheckEventlog_Object_After$"
+        }
+        "IncludeUsername" = {
+            value = "$IcingaCheckEventlog_Array_IncludeUsername$"
+        }
+        "ExcludeSource" = {
+            value = "$IcingaCheckEventlog_Array_ExcludeSource$"
+        }
+        "IncludeMessage" = {
+            value = "$IcingaCheckEventlog_Array_IncludeMessage$"
+        }
+        "ExcludeMessage" = {
+            value = "$IcingaCheckEventlog_Array_ExcludeMessage$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckEventlog_Int32_Verbosity$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckeventlog
+    vars.IcingaCheckEventlog_Switchparameter_NoPerfData = false
 }
