--- a/config/icinga/Invoke-IcingaCheckFirewall.conf
+++ b/config/icinga/Invoke-IcingaCheckFirewall.conf
@@ -61,6 +61,24 @@ object CheckCommand "Invoke-IcingaCheckFirewall" {
             order = 99
         }
     }
+    vars.ifw_api_arguments = {
+        "Profile" = {
+            value = "$IcingaCheckFirewall_Array_Profile$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckFirewall_Int32_Verbosity$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckFirewall_String_ThresholdInterval$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckFirewall_Switchparameter_NoPerfData$"
+        }
+        "Enabled" = {
+            set_if = "$IcingaCheckFirewall_Switchparameter_Enabled$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckfirewall
     vars.IcingaCheckFirewall_Switchparameter_Enabled = false
     vars.IcingaCheckFirewall_Switchparameter_NoPerfData = false
 }
