--- a/config/icinga/Invoke-IcingaCheckHTTPStatus.conf
+++ b/config/icinga/Invoke-IcingaCheckHTTPStatus.conf
@@ -238,8 +238,71 @@ object CheckCommand "Invoke-IcingaCheckHTTPStatus" {
             order = 99
         }
     }
-    vars.IcingaCheckHTTPStatus_Switchparameter_ConnectionErrAsCrit = false
-    vars.IcingaCheckHTTPStatus_Switchparameter_Negate = false
     vars.IcingaCheckHTTPStatus_Switchparameter_NoPerfData = false
+    vars.ifw_api_arguments = {
+        "Url" = {
+            value = "$IcingaCheckHTTPStatus_Array_Url$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckHTTPStatus_Int32_Verbosity$"
+        }
+        "Timeout" = {
+            value = "$IcingaCheckHTTPStatus_Int32_Timeout$"
+        }
+        "Username" = {
+            value = "$IcingaCheckHTTPStatus_String_Username$"
+        }
+        "Password" = {
+            value = "$IcingaCheckHTTPStatus_Securestring_Password$"
+        }
+        "Negate" = {
+            set_if = "$IcingaCheckHTTPStatus_Switchparameter_Negate$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckHTTPStatus_String_ThresholdInterval$"
+        }
+        "VHost" = {
+            value = "$IcingaCheckHTTPStatus_String_VHost$"
+        }
+        "Content" = {
+            value = "$IcingaCheckHTTPStatus_Array_Content$"
+        }
+        "AddOutputContent" = {
+            set_if = "$IcingaCheckHTTPStatus_Switchparameter_AddOutputContent$"
+        }
+        "ProxyUsername" = {
+            value = "$IcingaCheckHTTPStatus_String_ProxyUsername$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckHTTPStatus_Object_Warning$"
+        }
+        "Headers" = {
+            value = "$IcingaCheckHTTPStatus_Array_Headers$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckHTTPStatus_Object_Critical$"
+        }
+        "StatusCode" = {
+            value = "$IcingaCheckHTTPStatus_Array_StatusCode$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckHTTPStatus_Switchparameter_NoPerfData$"
+        }
+        "ProxyServer" = {
+            value = "$IcingaCheckHTTPStatus_String_ProxyServer$"
+        }
+        "ConnectionErrAsCrit" = {
+            set_if = "$IcingaCheckHTTPStatus_Switchparameter_ConnectionErrAsCrit$"
+        }
+        "Minimum" = {
+            value = "$IcingaCheckHTTPStatus_Int32_Minimum$"
+        }
+        "ProxyPassword" = {
+            value = "$IcingaCheckHTTPStatus_Securestring_ProxyPassword$"
+        }
+    }
     vars.IcingaCheckHTTPStatus_Switchparameter_AddOutputContent = false
+    vars.IcingaCheckHTTPStatus_Switchparameter_ConnectionErrAsCrit = false
+    vars.ifw_api_command = invoke-icingacheckhttpstatus
+    vars.IcingaCheckHTTPStatus_Switchparameter_Negate = false
 }
