--- a/config/icinga/Invoke-IcingaCheckHttpJsonResponse.conf
+++ b/config/icinga/Invoke-IcingaCheckHttpJsonResponse.conf
@@ -235,6 +235,57 @@ object CheckCommand "Invoke-IcingaCheckHttpJsonResponse" {
         }
     }
     vars.IcingaCheckHttpJsonResponse_Switchparameter_NegateStringResults = false
+    vars.ifw_api_arguments = {
+        "QueryParameter" = {
+            value = "$IcingaCheckHttpJsonResponse_String_QueryParameter$"
+        }
+        "Timeout" = {
+            value = "$IcingaCheckHttpJsonResponse_Int32_Timeout$"
+        }
+        "Username" = {
+            value = "$IcingaCheckHttpJsonResponse_String_Username$"
+        }
+        "Password" = {
+            value = "$IcingaCheckHttpJsonResponse_Securestring_Password$"
+        }
+        "ValueTypes" = {
+            value = "$IcingaCheckHttpJsonResponse_Array_ValueTypes$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckHttpJsonResponse_String_ThresholdInterval$"
+        }
+        "IgnoreSSL" = {
+            set_if = "$IcingaCheckHttpJsonResponse_Switchparameter_IgnoreSSL$"
+        }
+        "ServerPath" = {
+            value = "$IcingaCheckHttpJsonResponse_String_ServerPath$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckHttpJsonResponse_Switchparameter_NoPerfData$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckHttpJsonResponse_Array_Warning$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckHttpJsonResponse_Array_Critical$"
+        }
+        "ValuePaths" = {
+            value = "$IcingaCheckHttpJsonResponse_Array_ValuePaths$"
+        }
+        "StatusOnRequestError" = {
+            value = "$IcingaCheckHttpJsonResponse_String_StatusOnRequestError$"
+        }
+        "NegateStringResults" = {
+            set_if = "$IcingaCheckHttpJsonResponse_Switchparameter_NegateStringResults$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckHttpJsonResponse_Int32_Verbosity$"
+        }
+        "ServerUri" = {
+            value = "$IcingaCheckHttpJsonResponse_String_ServerUri$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckhttpjsonresponse
     vars.IcingaCheckHttpJsonResponse_Switchparameter_IgnoreSSL = false
     vars.IcingaCheckHttpJsonResponse_Switchparameter_NoPerfData = false
 }
