--- a/config/icinga/Invoke-IcingaCheckICMP.conf
+++ b/config/icinga/Invoke-IcingaCheckICMP.conf
@@ -91,6 +91,45 @@ object CheckCommand "Invoke-IcingaCheckICMP" {
         }
     }
     vars.IcingaCheckICMP_Switchparameter_NoPerfData = false
+    vars.ifw_api_arguments = {
+        "PacketCount" = {
+            value = "$IcingaCheckICMP_Int32_PacketCount$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckICMP_Int32_Verbosity$"
+        }
+        "Hostname" = {
+            value = "$IcingaCheckICMP_String_Hostname$"
+        }
+        "CriticalPl" = {
+            value = "$IcingaCheckICMP_Object_CriticalPl$"
+        }
+        "WarningPl" = {
+            value = "$IcingaCheckICMP_Object_WarningPl$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckICMP_Switchparameter_NoPerfData$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckICMP_Object_Critical$"
+        }
+        "IPv6" = {
+            set_if = "$IcingaCheckICMP_Switchparameter_IPv6$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckICMP_Object_Warning$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckICMP_String_ThresholdInterval$"
+        }
+        "PacketSize" = {
+            value = "$IcingaCheckICMP_Int32_PacketSize$"
+        }
+        "IPv4" = {
+            set_if = "$IcingaCheckICMP_Switchparameter_IPv4$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckicmp
     vars.IcingaCheckICMP_Switchparameter_IPv6 = false
     vars.IcingaCheckICMP_Switchparameter_IPv4 = false
 }
