--- a/config/icinga/Invoke-IcingaCheckMPIO.conf
+++ b/config/icinga/Invoke-IcingaCheckMPIO.conf
@@ -45,4 +45,22 @@ object CheckCommand "Invoke-IcingaCheckMPIO" {
         }
     }
     vars.IcingaCheckMPIO_Switchparameter_NoPerfData = false
+    vars.ifw_api_arguments = {
+        "Critical" = {
+            value = "$IcingaCheckMPIO_Object_Critical$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckMPIO_Object_Warning$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckMPIO_String_ThresholdInterval$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckMPIO_Switchparameter_NoPerfData$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckMPIO_Object_Verbosity$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckmpio
 }
