--- a/config/icinga/Invoke-IcingaCheckMemory.conf
+++ b/config/icinga/Invoke-IcingaCheckMemory.conf
@@ -100,4 +100,34 @@ object CheckCommand "Invoke-IcingaCheckMemory" {
         }
     }
     vars.IcingaCheckMemory_Switchparameter_NoPerfData = false
+    vars.ifw_api_arguments = {
+        "Critical" = {
+            value = "$IcingaCheckMemory_Object_Critical$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckMemory_String_ThresholdInterval$"
+        }
+        "PageFileWarning" = {
+            value = "$IcingaCheckMemory_Object_PageFileWarning$"
+        }
+        "PageFileCritical" = {
+            value = "$IcingaCheckMemory_Object_PageFileCritical$"
+        }
+        "IncludePageFile" = {
+            value = "$IcingaCheckMemory_Array_IncludePageFile$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckMemory_Object_Warning$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckMemory_Switchparameter_NoPerfData$"
+        }
+        "ExcludePageFile" = {
+            value = "$IcingaCheckMemory_Array_ExcludePageFile$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckMemory_Int32_Verbosity$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckmemory
 }
