--- a/config/icinga/Invoke-IcingaCheckNLA.conf
+++ b/config/icinga/Invoke-IcingaCheckNLA.conf
@@ -71,4 +71,19 @@ object CheckCommand "Invoke-IcingaCheckNLA" {
             order = 3
         }
     }
+    vars.ifw_api_arguments = {
+        "Profile" = {
+            value = "$IcingaCheckNLA_String_Profile$"
+        }
+        "NICs" = {
+            value = "$IcingaCheckNLA_Array_NICs$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckNLA_String_ThresholdInterval$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckNLA_Int32_Verbosity$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingachecknla
 }
