--- a/config/icinga/Invoke-IcingaCheckNetworkInterface.conf
+++ b/config/icinga/Invoke-IcingaCheckNetworkInterface.conf
@@ -277,4 +277,118 @@ object CheckCommand "Invoke-IcingaCheckNetworkInterface" {
     }
     vars.IcingaCheckNetworkInterface_Switchparameter_IncludeHidden = false
     vars.IcingaCheckNetworkInterface_Switchparameter_NoPerfData = false
+    vars.ifw_api_arguments = {
+        "PackteReceivedErrorCrit" = {
+            value = "$IcingaCheckNetworkInterface_Object_PackteReceivedErrorCrit$"
+        }
+        "IfOperationalStatusWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_IfOperationalStatusWarn$"
+        }
+        "IncludeHidden" = {
+            set_if = "$IcingaCheckNetworkInterface_Switchparameter_IncludeHidden$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckNetworkInterface_Object_Verbosity$"
+        }
+        "DeviceSentBytesSecWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_DeviceSentBytesSecWarn$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckNetworkInterface_Switchparameter_NoPerfData$"
+        }
+        "PackteOutboundErrorCrit" = {
+            value = "$IcingaCheckNetworkInterface_Object_PackteOutboundErrorCrit$"
+        }
+        "IfTeamStatusCrit" = {
+            value = "$IcingaCheckNetworkInterface_Object_IfTeamStatusCrit$"
+        }
+        "IfAdminStatusWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_IfAdminStatusWarn$"
+        }
+        "IfConnectionStatusCrit" = {
+            value = "$IcingaCheckNetworkInterface_Object_IfConnectionStatusCrit$"
+        }
+        "ExcludeNetworkDevice" = {
+            value = "$IcingaCheckNetworkInterface_Array_ExcludeNetworkDevice$"
+        }
+        "DeviceTotalBytesSecWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_DeviceTotalBytesSecWarn$"
+        }
+        "IfTeamStatusWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_IfTeamStatusWarn$"
+        }
+        "PackteOutboundErrorWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_PackteOutboundErrorWarn$"
+        }
+        "PacketReceivedDiscardedWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_PacketReceivedDiscardedWarn$"
+        }
+        "IfOperationalStatusCrit" = {
+            value = "$IcingaCheckNetworkInterface_Object_IfOperationalStatusCrit$"
+        }
+        "DeviceReceivedBytesSecWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_DeviceReceivedBytesSecWarn$"
+        }
+        "PacketReceivedDiscardedCrit" = {
+            value = "$IcingaCheckNetworkInterface_Object_PacketReceivedDiscardedCrit$"
+        }
+        "ExcludeInterfaceTeam" = {
+            value = "$IcingaCheckNetworkInterface_Array_ExcludeInterfaceTeam$"
+        }
+        "PacketOutboundDiscardedWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_PacketOutboundDiscardedWarn$"
+        }
+        "PackteReceivedErrorWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_PackteReceivedErrorWarn$"
+        }
+        "DeviceTotalBytesSecCrit" = {
+            value = "$IcingaCheckNetworkInterface_Object_DeviceTotalBytesSecCrit$"
+        }
+        "PacketSentSecCrit" = {
+            value = "$IcingaCheckNetworkInterface_Object_PacketSentSecCrit$"
+        }
+        "LinkSpeedWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_LinkSpeedWarn$"
+        }
+        "DeviceSentBytesSecCrit" = {
+            value = "$IcingaCheckNetworkInterface_Object_DeviceSentBytesSecCrit$"
+        }
+        "PacketOutboundDiscardedCrit" = {
+            value = "$IcingaCheckNetworkInterface_Object_PacketOutboundDiscardedCrit$"
+        }
+        "LinkSpeedCrit" = {
+            value = "$IcingaCheckNetworkInterface_Object_LinkSpeedCrit$"
+        }
+        "IncludeInterfaceTeam" = {
+            value = "$IcingaCheckNetworkInterface_Array_IncludeInterfaceTeam$"
+        }
+        "DeviceReceivedBytesSecCrit" = {
+            value = "$IcingaCheckNetworkInterface_Object_DeviceReceivedBytesSecCrit$"
+        }
+        "PacketSentSecWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_PacketSentSecWarn$"
+        }
+        "IfSlaveEnabledStateWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_IfSlaveEnabledStateWarn$"
+        }
+        "IncludeNetworkDevice" = {
+            value = "$IcingaCheckNetworkInterface_Array_IncludeNetworkDevice$"
+        }
+        "PacketReceivedSecWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_PacketReceivedSecWarn$"
+        }
+        "IfConnectionStatusWarn" = {
+            value = "$IcingaCheckNetworkInterface_Object_IfConnectionStatusWarn$"
+        }
+        "IfSlaveEnabledStateCrit" = {
+            value = "$IcingaCheckNetworkInterface_Object_IfSlaveEnabledStateCrit$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckNetworkInterface_String_ThresholdInterval$"
+        }
+        "PacketReceivedSecCrit" = {
+            value = "$IcingaCheckNetworkInterface_Object_PacketReceivedSecCrit$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingachecknetworkinterface
 }
