--- a/config/icinga/Invoke-IcingaCheckPartitionSpace.conf
+++ b/config/icinga/Invoke-IcingaCheckPartitionSpace.conf
@@ -102,8 +102,41 @@ object CheckCommand "Invoke-IcingaCheckPartitionSpace" {
             order = 99
         }
     }
+    vars.ifw_api_arguments = {
+        "Verbosity" = {
+            value = "$IcingaCheckPartitionSpace_Int32_Verbosity$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckPartitionSpace_String_ThresholdInterval$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckPartitionSpace_Switchparameter_NoPerfData$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckPartitionSpace_Object_Critical$"
+        }
+        "Exclude" = {
+            value = "$IcingaCheckPartitionSpace_Array_Exclude$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckPartitionSpace_Object_Warning$"
+        }
+        "IgnoreEmptyChecks" = {
+            set_if = "$IcingaCheckPartitionSpace_Switchparameter_IgnoreEmptyChecks$"
+        }
+        "SkipUnknown" = {
+            set_if = "$IcingaCheckPartitionSpace_Switchparameter_SkipUnknown$"
+        }
+        "CheckUsedSpace" = {
+            set_if = "$IcingaCheckPartitionSpace_Switchparameter_CheckUsedSpace$"
+        }
+        "Include" = {
+            value = "$IcingaCheckPartitionSpace_Array_Include$"
+        }
+    }
     vars.IcingaCheckPartitionSpace_Switchparameter_SkipUnknown = false
     vars.IcingaCheckPartitionSpace_Switchparameter_IgnoreEmptyChecks = false
-    vars.IcingaCheckPartitionSpace_Switchparameter_NoPerfData = false
     vars.IcingaCheckPartitionSpace_Switchparameter_CheckUsedSpace = false
+    vars.IcingaCheckPartitionSpace_Switchparameter_NoPerfData = false
+    vars.ifw_api_command = invoke-icingacheckpartitionspace
 }
