--- a/config/icinga/Invoke-IcingaCheckPerfcounter.conf
+++ b/config/icinga/Invoke-IcingaCheckPerfcounter.conf
@@ -117,6 +117,36 @@ object CheckCommand "Invoke-IcingaCheckPerfCounter" {
             order = 0
         }
     }
-    vars.IcingaCheckPerfCounter_Switchparameter_IgnoreEmptyChecks = false
     vars.IcingaCheckPerfCounter_Switchparameter_NoPerfData = false
+    vars.IcingaCheckPerfCounter_Switchparameter_IgnoreEmptyChecks = false
+    vars.ifw_api_arguments = {
+        "PerfCounter" = {
+            value = "$IcingaCheckPerfCounter_Array_PerfCounter$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckPerfCounter_String_ThresholdInterval$"
+        }
+        "ExcludeCounter" = {
+            value = "$IcingaCheckPerfCounter_Array_ExcludeCounter$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckPerfCounter_Object_Critical$"
+        }
+        "IgnoreEmptyChecks" = {
+            set_if = "$IcingaCheckPerfCounter_Switchparameter_IgnoreEmptyChecks$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckPerfCounter_Object_Warning$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckPerfCounter_Switchparameter_NoPerfData$"
+        }
+        "IncludeCounter" = {
+            value = "$IcingaCheckPerfCounter_Array_IncludeCounter$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckPerfCounter_Int32_Verbosity$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckperfcounter
 }
