--- a/config/icinga/Invoke-IcingaCheckProcess.conf
+++ b/config/icinga/Invoke-IcingaCheckProcess.conf
@@ -148,4 +148,73 @@ object CheckCommand "Invoke-IcingaCheckProcess" {
         }
     }
     vars.IcingaCheckProcess_Switchparameter_NoPerfData = false
+    vars.ifw_api_arguments = {
+        "TotalThreadCountWarning" = {
+            value = "$IcingaCheckProcess_Object_TotalThreadCountWarning$"
+        }
+        "ThreadCountWarning" = {
+            value = "$IcingaCheckProcess_Object_ThreadCountWarning$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckProcess_Switchparameter_NoPerfData$"
+        }
+        "CPUCritical" = {
+            value = "$IcingaCheckProcess_Object_CPUCritical$"
+        }
+        "TotalPageFileCritical" = {
+            value = "$IcingaCheckProcess_Object_TotalPageFileCritical$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckProcess_String_ThresholdInterval$"
+        }
+        "TotalPageFileWarning" = {
+            value = "$IcingaCheckProcess_Object_TotalPageFileWarning$"
+        }
+        "PageFileWarning" = {
+            value = "$IcingaCheckProcess_Object_PageFileWarning$"
+        }
+        "ThreadCountCritical" = {
+            value = "$IcingaCheckProcess_Object_ThreadCountCritical$"
+        }
+        "TotalCPUWarning" = {
+            value = "$IcingaCheckProcess_Object_TotalCPUWarning$"
+        }
+        "PageFileCritical" = {
+            value = "$IcingaCheckProcess_Object_PageFileCritical$"
+        }
+        "Process" = {
+            value = "$IcingaCheckProcess_Array_Process$"
+        }
+        "TotalProcessCountWarning" = {
+            value = "$IcingaCheckProcess_Object_TotalProcessCountWarning$"
+        }
+        "CPUWarning" = {
+            value = "$IcingaCheckProcess_Object_CPUWarning$"
+        }
+        "TotalMemoryCritical" = {
+            value = "$IcingaCheckProcess_Object_TotalMemoryCritical$"
+        }
+        "TotalMemoryWarning" = {
+            value = "$IcingaCheckProcess_Object_TotalMemoryWarning$"
+        }
+        "TotalThreadCountCritical" = {
+            value = "$IcingaCheckProcess_Object_TotalThreadCountCritical$"
+        }
+        "MemoryWarning" = {
+            value = "$IcingaCheckProcess_Object_MemoryWarning$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckProcess_Int32_Verbosity$"
+        }
+        "TotalProcessCountCritical" = {
+            value = "$IcingaCheckProcess_Object_TotalProcessCountCritical$"
+        }
+        "MemoryCritical" = {
+            value = "$IcingaCheckProcess_Object_MemoryCritical$"
+        }
+        "TotalCPUCritical" = {
+            value = "$IcingaCheckProcess_Object_TotalCPUCritical$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckprocess
 }
