--- a/config/icinga/Invoke-IcingaCheckProcessCount.conf
+++ b/config/icinga/Invoke-IcingaCheckProcessCount.conf
@@ -67,5 +67,26 @@ object CheckCommand "Invoke-IcingaCheckProcessCount" {
             order = 99
         }
     }
+    vars.ifw_api_arguments = {
+        "Process" = {
+            value = "$IcingaCheckProcessCount_Array_Process$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckProcessCount_String_ThresholdInterval$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckProcessCount_Object_Critical$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckProcessCount_Object_Warning$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckProcessCount_Switchparameter_NoPerfData$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckProcessCount_Int32_Verbosity$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckprocesscount
     vars.IcingaCheckProcessCount_Switchparameter_NoPerfData = false
 }
