--- a/config/icinga/Invoke-IcingaCheckScheduledTask.conf
+++ b/config/icinga/Invoke-IcingaCheckScheduledTask.conf
@@ -189,6 +189,48 @@ object CheckCommand "Invoke-IcingaCheckScheduledTask" {
             order = 7
         }
     }
-    vars.IcingaCheckScheduledTask_Switchparameter_NoPerfData = false
     vars.IcingaCheckScheduledTask_Switchparameter_IgnoreLastRunTime = false
+    vars.ifw_api_arguments = {
+        "CriticalNextRunTime" = {
+            value = "$IcingaCheckScheduledTask_String_CriticalNextRunTime$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckScheduledTask_String_ThresholdInterval$"
+        }
+        "TaskName" = {
+            value = "$IcingaCheckScheduledTask_Array_TaskName$"
+        }
+        "WarningMissedRuns" = {
+            value = "$IcingaCheckScheduledTask_Object_WarningMissedRuns$"
+        }
+        "WarningNextRunTime" = {
+            value = "$IcingaCheckScheduledTask_String_WarningNextRunTime$"
+        }
+        "CriticalLastRunTime" = {
+            value = "$IcingaCheckScheduledTask_String_CriticalLastRunTime$"
+        }
+        "CriticalMissedRuns" = {
+            value = "$IcingaCheckScheduledTask_Object_CriticalMissedRuns$"
+        }
+        "IgnoreLastRunTime" = {
+            set_if = "$IcingaCheckScheduledTask_Switchparameter_IgnoreLastRunTime$"
+        }
+        "IgnoreExitCodes" = {
+            value = "$IcingaCheckScheduledTask_Array_IgnoreExitCodes$"
+        }
+        "WarningLastRunTime" = {
+            value = "$IcingaCheckScheduledTask_String_WarningLastRunTime$"
+        }
+        "State" = {
+            value = "$IcingaCheckScheduledTask_Array_State$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckScheduledTask_Switchparameter_NoPerfData$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckScheduledTask_Int32_Verbosity$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckscheduledtask
+    vars.IcingaCheckScheduledTask_Switchparameter_NoPerfData = false
 }
