--- a/config/icinga/Invoke-IcingaCheckService.conf
+++ b/config/icinga/Invoke-IcingaCheckService.conf
@@ -126,5 +126,32 @@ object CheckCommand "Invoke-IcingaCheckService" {
         }
     }
     vars.IcingaCheckService_Switchparameter_NoPerfData = false
+    vars.ifw_api_arguments = {
+        "ThresholdInterval" = {
+            value = "$IcingaCheckService_String_ThresholdInterval$"
+        }
+        "MitigateUnknown" = {
+            set_if = "$IcingaCheckService_Switchparameter_MitigateUnknown$"
+        }
+        "FilterStartupType" = {
+            value = "$IcingaCheckService_Array_FilterStartupType$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckService_Int32_Verbosity$"
+        }
+        "Service" = {
+            value = "$IcingaCheckService_Array_Service$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckService_Switchparameter_NoPerfData$"
+        }
+        "Status" = {
+            value = "$IcingaCheckService_String_Status$"
+        }
+        "Exclude" = {
+            value = "$IcingaCheckService_Array_Exclude$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckservice
     vars.IcingaCheckService_Switchparameter_MitigateUnknown = false
 }
