--- a/config/icinga/Invoke-IcingaCheckStoragePool.conf
+++ b/config/icinga/Invoke-IcingaCheckStoragePool.conf
@@ -155,5 +155,68 @@ object CheckCommand "Invoke-IcingaCheckStoragePool" {
         }
     }
     vars.IcingaCheckStoragePool_Switchparameter_IncludePrimordial = false
+    vars.ifw_api_arguments = {
+        "ClearOnDeallocateCritical" = {
+            value = "$IcingaCheckStoragePool_Object_ClearOnDeallocateCritical$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckStoragePool_Switchparameter_NoPerfData$"
+        }
+        "HealthStatusCritical" = {
+            value = "$IcingaCheckStoragePool_Object_HealthStatusCritical$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckStoragePool_String_ThresholdInterval$"
+        }
+        "TotalUsedWarning" = {
+            value = "$IcingaCheckStoragePool_Object_TotalUsedWarning$"
+        }
+        "RetireMissingPhysicalDisksWarning" = {
+            value = "$IcingaCheckStoragePool_Object_RetireMissingPhysicalDisksWarning$"
+        }
+        "HealthStatusWarning" = {
+            value = "$IcingaCheckStoragePool_Object_HealthStatusWarning$"
+        }
+        "IncludePrimordial" = {
+            set_if = "$IcingaCheckStoragePool_Switchparameter_IncludePrimordial$"
+        }
+        "IsPowerProtectedCritical" = {
+            value = "$IcingaCheckStoragePool_Object_IsPowerProtectedCritical$"
+        }
+        "ExcludeStoragePool" = {
+            value = "$IcingaCheckStoragePool_Array_ExcludeStoragePool$"
+        }
+        "SupportsDeduplicationCritical" = {
+            value = "$IcingaCheckStoragePool_Object_SupportsDeduplicationCritical$"
+        }
+        "RetireMissingPhysicalDisksCritical" = {
+            value = "$IcingaCheckStoragePool_Object_RetireMissingPhysicalDisksCritical$"
+        }
+        "TotalUsedCritical" = {
+            value = "$IcingaCheckStoragePool_Object_TotalUsedCritical$"
+        }
+        "IsReadOnlyCritical" = {
+            value = "$IcingaCheckStoragePool_Object_IsReadOnlyCritical$"
+        }
+        "CapacityCritical" = {
+            value = "$IcingaCheckStoragePool_Object_CapacityCritical$"
+        }
+        "FreeSpaceWarning" = {
+            value = "$IcingaCheckStoragePool_Object_FreeSpaceWarning$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckStoragePool_Object_Verbosity$"
+        }
+        "FreeSpaceCritical" = {
+            value = "$IcingaCheckStoragePool_Object_FreeSpaceCritical$"
+        }
+        "IncludeStoragePool" = {
+            value = "$IcingaCheckStoragePool_Array_IncludeStoragePool$"
+        }
+        "CapacityWarning" = {
+            value = "$IcingaCheckStoragePool_Object_CapacityWarning$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckstoragepool
     vars.IcingaCheckStoragePool_Switchparameter_NoPerfData = false
 }
