--- a/config/icinga/Invoke-IcingaCheckTCP.conf
+++ b/config/icinga/Invoke-IcingaCheckTCP.conf
@@ -90,5 +90,32 @@ object CheckCommand "Invoke-IcingaCheckTCP" {
         }
     }
     vars.IcingaCheckTCP_Switchparameter_Negate = false
+    vars.ifw_api_arguments = {
+        "ThresholdInterval" = {
+            value = "$IcingaCheckTCP_String_ThresholdInterval$"
+        }
+        "Ports" = {
+            value = "$IcingaCheckTCP_Array_Ports$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckTCP_Object_Critical$"
+        }
+        "Negate" = {
+            set_if = "$IcingaCheckTCP_Switchparameter_Negate$"
+        }
+        "Address" = {
+            value = "$IcingaCheckTCP_String_Address$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckTCP_Object_Warning$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckTCP_Switchparameter_NoPerfData$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckTCP_Object_Verbosity$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingachecktcp
     vars.IcingaCheckTCP_Switchparameter_NoPerfData = false
 }
