--- a/config/icinga/Invoke-IcingaCheckTimeSync.conf
+++ b/config/icinga/Invoke-IcingaCheckTimeSync.conf
@@ -85,7 +85,43 @@ object CheckCommand "Invoke-IcingaCheckTimeSync" {
             order = 100
         }
     }
-    vars.IcingaCheckTimeSync_Switchparameter_NoPerfData = false
     vars.IcingaCheckTimeSync_Switchparameter_IPV4 = false
+    vars.IcingaCheckTimeSync_Switchparameter_NoPerfData = false
+    vars.ifw_api_arguments = {
+        "IPV4" = {
+            set_if = "$IcingaCheckTimeSync_Switchparameter_IPV4$"
+        }
+        "TimeOffset" = {
+            value = "$IcingaCheckTimeSync_Object_TimeOffset$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckTimeSync_String_ThresholdInterval$"
+        }
+        "Server" = {
+            value = "$IcingaCheckTimeSync_String_Server$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckTimeSync_Object_Critical$"
+        }
+        "Port" = {
+            value = "$IcingaCheckTimeSync_Int32_Port$"
+        }
+        "Timeout" = {
+            value = "$IcingaCheckTimeSync_Int32_Timeout$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckTimeSync_Object_Warning$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckTimeSync_Switchparameter_NoPerfData$"
+        }
+        "IgnoreService" = {
+            set_if = "$IcingaCheckTimeSync_Switchparameter_IgnoreService$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckTimeSync_Int32_Verbosity$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingachecktimesync
     vars.IcingaCheckTimeSync_Switchparameter_IgnoreService = false
 }
