--- a/config/icinga/Invoke-IcingaCheckUNCPath.conf
+++ b/config/icinga/Invoke-IcingaCheckUNCPath.conf
@@ -118,5 +118,44 @@ object CheckCommand "Invoke-IcingaCheckUNCPath" {
         }
     }
     vars.IcingaCheckUNCPath_Switchparameter_CheckUsedSpace = false
+    vars.ifw_api_arguments = {
+        "WarningTotal" = {
+            value = "$IcingaCheckUNCPath_Object_WarningTotal$"
+        }
+        "DisplayAlias" = {
+            value = "$IcingaCheckUNCPath_String_DisplayAlias$"
+        }
+        "Path" = {
+            value = "$IcingaCheckUNCPath_String_Path$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckUNCPath_String_ThresholdInterval$"
+        }
+        "CriticalTotal" = {
+            value = "$IcingaCheckUNCPath_Object_CriticalTotal$"
+        }
+        "Password" = {
+            value = "$IcingaCheckUNCPath_Securestring_Password$"
+        }
+        "CheckUsedSpace" = {
+            set_if = "$IcingaCheckUNCPath_Switchparameter_CheckUsedSpace$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckUNCPath_Object_Critical$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckUNCPath_Object_Warning$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckUNCPath_Switchparameter_NoPerfData$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckUNCPath_Object_Verbosity$"
+        }
+        "User" = {
+            value = "$IcingaCheckUNCPath_String_User$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckuncpath
     vars.IcingaCheckUNCPath_Switchparameter_NoPerfData = false
 }
