--- a/config/icinga/Invoke-IcingaCheckUpdates.conf
+++ b/config/icinga/Invoke-IcingaCheckUpdates.conf
@@ -116,6 +116,57 @@ object CheckCommand "Invoke-IcingaCheckUpdates" {
         }
     }
     vars.IcingaCheckUpdates_Switchparameter_NoPerfData = false
-    vars.IcingaCheckUpdates_Switchparameter_CritOnReboot = false
     vars.IcingaCheckUpdates_Switchparameter_WarnOnReboot = false
+    vars.IcingaCheckUpdates_Switchparameter_CritOnReboot = false
+    vars.ifw_api_arguments = {
+        "WarningRollups" = {
+            value = "$IcingaCheckUpdates_Object_WarningRollups$"
+        }
+        "CriticalSecurity" = {
+            value = "$IcingaCheckUpdates_Object_CriticalSecurity$"
+        }
+        "CriticalRollups" = {
+            value = "$IcingaCheckUpdates_Object_CriticalRollups$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckUpdates_Switchparameter_NoPerfData$"
+        }
+        "WarningDefender" = {
+            value = "$IcingaCheckUpdates_Object_WarningDefender$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckUpdates_String_ThresholdInterval$"
+        }
+        "WarningSecurity" = {
+            value = "$IcingaCheckUpdates_Object_WarningSecurity$"
+        }
+        "CriticalOther" = {
+            value = "$IcingaCheckUpdates_Object_CriticalOther$"
+        }
+        "CriticalDefender" = {
+            value = "$IcingaCheckUpdates_Object_CriticalDefender$"
+        }
+        "WarnOnReboot" = {
+            set_if = "$IcingaCheckUpdates_Switchparameter_WarnOnReboot$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckUpdates_Object_Warning$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckUpdates_Object_Critical$"
+        }
+        "CritOnReboot" = {
+            set_if = "$IcingaCheckUpdates_Switchparameter_CritOnReboot$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckUpdates_Int32_Verbosity$"
+        }
+        "UpdateFilter" = {
+            value = "$IcingaCheckUpdates_Array_UpdateFilter$"
+        }
+        "WarningOther" = {
+            value = "$IcingaCheckUpdates_Object_WarningOther$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckupdates
 }
