--- a/config/icinga/Invoke-IcingaCheckUptime.conf
+++ b/config/icinga/Invoke-IcingaCheckUptime.conf
@@ -71,4 +71,22 @@ object CheckCommand "Invoke-IcingaCheckUptime" {
         }
     }
     vars.IcingaCheckUptime_Switchparameter_NoPerfData = false
+    vars.ifw_api_arguments = {
+        "Critical" = {
+            value = "$IcingaCheckUptime_String_Critical$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckUptime_String_Warning$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckUptime_String_ThresholdInterval$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckUptime_Switchparameter_NoPerfData$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckUptime_Int32_Verbosity$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckuptime
 }
