--- a/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
+++ b/config/icinga/Invoke-IcingaCheckUsedPartitionSpace.conf
@@ -102,8 +102,41 @@ object CheckCommand "Invoke-IcingaCheckUsedPartitionSpace" {
             order = 99
         }
     }
-    vars.IcingaCheckUsedPartitionSpace_Switchparameter_SkipUnknown = false
-    vars.IcingaCheckUsedPartitionSpace_Switchparameter_IgnoreEmptyChecks = false
-    vars.IcingaCheckUsedPartitionSpace_Switchparameter_NoPerfData = false
+    vars.ifw_api_arguments = {
+        "Verbosity" = {
+            value = "$IcingaCheckUsedPartitionSpace_Int32_Verbosity$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckUsedPartitionSpace_String_ThresholdInterval$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_NoPerfData$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckUsedPartitionSpace_Object_Critical$"
+        }
+        "Exclude" = {
+            value = "$IcingaCheckUsedPartitionSpace_Array_Exclude$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckUsedPartitionSpace_Object_Warning$"
+        }
+        "IgnoreEmptyChecks" = {
+            set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_IgnoreEmptyChecks$"
+        }
+        "SkipUnknown" = {
+            set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_SkipUnknown$"
+        }
+        "CheckUsedSpace" = {
+            set_if = "$IcingaCheckUsedPartitionSpace_Switchparameter_CheckUsedSpace$"
+        }
+        "Include" = {
+            value = "$IcingaCheckUsedPartitionSpace_Array_Include$"
+        }
+    }
     vars.IcingaCheckUsedPartitionSpace_Switchparameter_CheckUsedSpace = false
+    vars.IcingaCheckUsedPartitionSpace_Switchparameter_IgnoreEmptyChecks = false
+    vars.ifw_api_command = invoke-icingacheckusedpartitionspace
+    vars.IcingaCheckUsedPartitionSpace_Switchparameter_NoPerfData = false
+    vars.IcingaCheckUsedPartitionSpace_Switchparameter_SkipUnknown = false
 }
