--- a/config/icinga/Invoke-IcingaCheckUsers.conf
+++ b/config/icinga/Invoke-IcingaCheckUsers.conf
@@ -68,4 +68,25 @@ object CheckCommand "Invoke-IcingaCheckUsers" {
         }
     }
     vars.IcingaCheckUsers_Switchparameter_NoPerfData = false
+    vars.ifw_api_arguments = {
+        "Username" = {
+            value = "$IcingaCheckUsers_Array_Username$"
+        }
+        "ThresholdInterval" = {
+            value = "$IcingaCheckUsers_String_ThresholdInterval$"
+        }
+        "Critical" = {
+            value = "$IcingaCheckUsers_Object_Critical$"
+        }
+        "Warning" = {
+            value = "$IcingaCheckUsers_Object_Warning$"
+        }
+        "NoPerfData" = {
+            set_if = "$IcingaCheckUsers_Switchparameter_NoPerfData$"
+        }
+        "Verbosity" = {
+            value = "$IcingaCheckUsers_Int32_Verbosity$"
+        }
+    }
+    vars.ifw_api_command = invoke-icingacheckusers
 }
